force-app/main/default/objects/bvd_connector__OrbisFields__c.object
<CustomObject>
    <fields>
        <fullName>bvd_connector__Data_Dimension__c</fullName>
        <description>Dimension if iterable</description>
        <inlineHelpText>Dimension if iterable</inlineHelpText>
        <label>Data Dimension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OrbisFields</label>
    <nameField>
        <label>OrbisFields Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrbisFields</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>